--- a/overview/index.html
+++ b/overview/index.html
@@ -237,7 +237,7 @@ namespace di = boost::di;
 <li><a href="https://ci.appveyor.com/project/boost-experimental/di">MSVC-2015+</a></li>
 </ul>
 <h3 id="design">Design</h3>
-<p><img alt="Design" src="../images/di.png" /></p>
+<p><a href="../images/di.png"><img alt="Design" src="../images/di.png" /></a></p>
 <table>
 <thead>
 <tr>
