--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
   <script src="./js/youtube.js"></script> 
 
   
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-73083568-1', 'auto');
+      ga('send', 'pageview');
+  </script>
+  
 </head>
 
 <body class="wy-body-for-nav" role="document">
@@ -375,5 +385,5 @@ It is like the Strategy Pattern, except the strategy is set once, at constructio
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-02-18 15:56:19.671072
+Build Date UTC : 2016-02-18 16:19:07.582066
 -->
