--- a/extensions/index.html
+++ b/extensions/index.html
@@ -275,7 +275,7 @@
   <div id="disqus_thread"></div>
   <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES * * */
-  var disqus_shortname = '';
+  var disqus_shortname = 'boost-di';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function() {
