--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ It is like the Strategy Pattern, except the strategy is set once, at constructio
   <div id="disqus_thread"></div>
   <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES * * */
-  var disqus_shortname = '';
+  var disqus_shortname = 'boost-di';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function() {
@@ -385,5 +385,5 @@ It is like the Strategy Pattern, except the strategy is set once, at constructio
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-02-18 16:19:07.582066
+Build Date UTC : 2016-02-18 16:37:56.435001
 -->
