--- a/overview/index.html
+++ b/overview/index.html
@@ -945,7 +945,7 @@ namespace di = boost::di;
   <div id="disqus_thread"></div>
   <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES * * */
-  var disqus_shortname = '';
+  var disqus_shortname = 'boost-di';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function() {
