--- a/quick_user_guide/index.html
+++ b/quick_user_guide/index.html
@@ -410,7 +410,7 @@ struct impl : i1, i2 { void dummy1() override { } void dummy2() override { } };
   <div id="disqus_thread"></div>
   <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES * * */
-  var disqus_shortname = '';
+  var disqus_shortname = 'boost-di';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function() {
