--- a/user_guide/index.html
+++ b/user_guide/index.html
@@ -2377,7 +2377,7 @@ di::make_injector(...)
   <div id="disqus_thread"></div>
   <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES * * */
-  var disqus_shortname = '';
+  var disqus_shortname = 'boost-di';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function() {
