--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Your C++14 header only dependency injection library with no dependencies (<a href="http://boost-experimental.github.io/di/examples/index.html#hello-world"><strong>Try it online!</strong></a>)</td>
+<td>Your C++14 header only Dependency Injection library with no dependencies (<a href="http://boost-experimental.github.io/di/examples/index.html#hello-world"><strong>Try it online!</strong></a>)</td>
 <td><a class="github-button" href="https://github.com/boost-experimental/di" data-style="mega" data-count-href="/boost-experimental/di/stargazers" data-count-api="/repos/boost-experimental/di#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star boost-experimental/di on GitHub">GitHub</a></td>
 </tr>
 </tbody>
@@ -262,21 +262,21 @@ It is like the Strategy Pattern, except the strategy is set once, at constructio
 <h3 id="real-life-examples">Real Life examples?</h3>
 <ul>
 <li><a href="https://github.com/krzysztof-jusiak/match3">Match-3 Game</a><ul>
-<li>Simple game in C++14 using SDL2 / MVC pattern / Meta State Machine / Dependency Injection</li>
+<li>Simple game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection</li>
 </ul>
 </li>
 </ul>
 <blockquote></blockquote>
 <ul>
 <li><a href="https://github.com/krzysztof-jusiak/mocks_injector">Automatic Mocks Injector</a><ul>
-<li>Automatically create and inject required mocks to tested classes via type constructors</li>
+<li>Automatically create and inject required mocks to tested classes via constructors</li>
 </ul>
 </li>
 </ul>
 <blockquote></blockquote>
 <ul>
 <li><a href="http://boost-experimental.github.io/msm-lite/">Experimental Boost.MSM-lite</a><ul>
-<li>Your scalable C++14 header only eUML-like meta state machine library with no dependencies</li>
+<li>C++14 header only eUML-like Meta State Machine library with no dependencies</li>
 </ul>
 </li>
 </ul>
@@ -312,7 +312,7 @@ It is like the Strategy Pattern, except the strategy is set once, at constructio
 <ul>
 <li>Be as fast as possible (see <a href="overview/index.html#performance">Performance</a>)</li>
 <li>Compile as fast as possible (see <a href="overview/index.html#performance">Performance</a>)</li>
-<li>Gives short and intuitive error messages (see <a href="overview/index.html#error_messages">Error messages</a>)</li>
+<li>Give short and intuitive error messages (see <a href="overview/index.html#error_messages">Error messages</a>)</li>
 <li>Guarantee object creation at compile-time (see <a href="overview/index.html#performance">Performance</a>)</li>
 <li>Be as non-intrusive as possible (see <a href="overview/index.html#performance">Performance</a>)</li>
 <li>Be easy to extend (see <a href="extensions/index.html">Extensions</a>)</li>
@@ -385,5 +385,5 @@ It is like the Strategy Pattern, except the strategy is set once, at constructio
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-02-18 17:01:09.879625
+Build Date UTC : 2016-02-18 20:17:33.016476
 -->
