--- a/extensions/index.html
+++ b/extensions/index.html
@@ -247,6 +247,7 @@
 <p><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/types_dumper.cpp" /></p>
 <h3 id="uml-dumper">UML Dumper</h3>
 <p><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp" /></p>
+<p><a href="../images/uml_dumper.png"><img alt="UML Dumper" src="../images/uml_dumper.png" /></a></p>
 <h3 id="mocks-provider">Mocks Provider</h3>
 <p><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/providers/mocks_provider.cpp" /></p>
 <h3 id="scoped-scope">Scoped Scope</h3>
