--- a/user_guide/index.html
+++ b/user_guide/index.html
@@ -546,9 +546,9 @@ Automatic constructor parameters deduction is limited to [BOOST_DI_CFG_CTOR_LIMI
 </div>
 
 <p><strong><em>Semantics</em></strong></p>
-<pre><code>class constructor {
+<pre><code>class T {
 public:
-  constructor(auto parameter1, auto parameter2, ..., auto parameterN);
+  T(auto parameter1, auto parameter2, ..., auto parameterN);
 };
 </code></pre>
 <table>
