--- a/overview/index.html
+++ b/overview/index.html
@@ -468,7 +468,21 @@ namespace di = boost::di;
 </table>
 <h3 id="dependency-injection-libraries">Dependency Injection Libraries</h3>
 <ul>
-<li>C++ Dependency Injection Libraries</li>
+<li>
+<p>C++ Dependency Injection Libraries</p>
+<ul>
+<li><a href="https://bitbucket.org/cheez/dicpp">https://bitbucket.org/cheez/dicpp</a></li>
+<li><a href="https://github.com/google/fruit">https://github.com/google/fruit</a></li>
+<li><a href="https://github.com/phs/sauce">https://github.com/phs/sauce</a></li>
+<li><a href="http://wallaroolib.sourceforge.net">http://wallaroolib.sourceforge.net</a></li>
+<li><a href="https://github.com/ybainier/hypodermic">https://github.com/ybainier/hypodermic</a></li>
+<li><a href="https://code.google.com/p/infectorpp">https://code.google.com/p/infectorpp</a></li>
+<li><a href="https://github.com/vogel/injeqt">https://github.com/vogel/injeqt</a></li>
+<li><a href="https://github.com/gracicot/kangaru">https://github.com/gracicot/kangaru</a></li>
+<li><a href="https://github.com/admiyo/CppInject">https://github.com/admiyo/CppInject</a></li>
+<li><a href="http://codebros.github.io/DiLite">http://codebros.github.io/DiLite</a></li>
+</ul>
+</li>
 </ul>
 <table>
 <thead>
