--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -775,6 +775,7 @@ di::injector&lt;app&gt; app_module(bool use_gui_view) {
     })
   , di::bind&lt;timer&gt;().in(di::unique) // different per request
   , di::bind&lt;iclient*[]&gt;().to&lt;user, timer&gt;() // bind many clients
+  , model_module()
   );
 }
 </code></pre>
@@ -786,6 +787,7 @@ di::injector&lt;app&gt; app_module(bool use_gui_view) {
 <h3><span class="fa fa-eye wy-text-neutral"></span>&nbsp; Note</h3>
 You can expose named parameters using `di::injector<BOOST_DI_EXPOSE((named = Rows) int)>`.
 Different variations of the same type have to be exposed explicitly using `di::injector<model&, std::unique_ptr<model>>`.
+Expose uses type erasure and therefore it has small performance overhead!
 </div>
 
 <p>Congrats, you have finished the basic part of the tutorial.
