--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -862,7 +862,7 @@ smart pointers and no raw pointers. We want to have view only with const paramet
 <p><code>Boost.DI</code> was design having extensibility in mind. You can easily customize</p>
 <ul>
 <li><a href="../user_guide/index.html#scopes">scopes</a> - to have custom life time of an object</li>
-<li>[providers] - to have custom way of creating objects, for example by using preallocated memory</li>
+<li><a href="../user_guide/index.html#providers">providers</a> - to have custom way of creating objects, for example by using preallocated memory</li>
 <li><a href="../user_guide/index.html#policies">policies</a> - to have custom way of dumping types at run-time or limiting them at compile-time</li>
 </ul>
 <p><img alt="CPP(BTN)" src="../Run_Custom_Policy_Example|https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/custom_policy.cpp" />
