--- a/overview/index.html
+++ b/overview/index.html
@@ -837,19 +837,19 @@ struct core::injector : TBindings... {
 <tbody>
 <tr>
 <td>Boost.DI</td>
-<td><img alt="CPP(RESULT)" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/di.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/di.cpp" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/google/guice">Google.Guice</a></td>
-<td><img alt="CPP(RESULT)" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/guice.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/guice.cpp" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/google/dagger">Dagger2</a></td>
-<td><img alt="CPP(RESULT)" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/dagger2.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/dagger2.cpp" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/ninject/ninject">Ninject</a></td>
-<td><img alt="CPP(RESULT)" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/Ninject.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/Ninject.cpp" /></td>
 </tr>
 </tbody>
 </table>
