--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@ It is like the Strategy Pattern, except the strategy is set once, at constructio
 </li>
 </ul>
 <h3 id="do-i-need-a-frameworklibrary">Do I need a Framework/Library?</h3>
-<pre><code class="cpp">renderer renderer_;
+<pre><code class="cpp">logger l
+renderer renderer_;
 view view_{&quot;&quot;, renderer_};
 model model_;
 controller controller_{model_, view_};
@@ -382,5 +383,5 @@ app app_{controller_, user_};
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-02-20 20:29:22.535244
+Build Date UTC : 2016-02-20 21:14:18.411358
 -->
