--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -750,7 +750,7 @@ Well, it wasn't even closed to what we would like to, but we can fix it easily u
 auto Cols = []{};
 </code></pre>
 
-<p>Secondly, we have to inform <code>model</code> constructor about it.</p>
+<p>Secondly, we have to tell <code>model</code> constructor about it.</p>
 <pre><code class="cpp">class model {
  public:
    model(int size, double precision) { }
